--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 @import "normalize.css";
+@import url("header.css");
+@import url("footer.css");
+@import url("modal.css");
 /* GLOBAL */
 * {
   padding: 0;
   margin: 0;
 }
-
 :root {
   --text-color: #434455;
   --background-color: #ffffff;
@@ -17,6 +19,7 @@
 }
 
 body {
+  max-width: 100%;
   /* display: block; */
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -24,14 +27,17 @@ body {
   line-height: 24px;
   color: rgba(46, 47, 66, 1);
 }
+
 .container {
-  width: 1158px;
+  width: 100%;
   margin: 0 auto;
   padding: 0 15px;
 }
+
 .list {
   list-style: none;
   display: flex;
+  /* flex-wrap: wrap; */
   gap: 24px;
 }
 
@@ -54,91 +60,6 @@ img {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-}
-
-/* HEADER */
-.head {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom: 1px solid #e7e9fc;
-  height: 72px;
-  /* padding: 31px 0; */
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-}
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--logo-color);
-  margin-right: 76px;
-}
-
-.link:hover,
-.link:focus {
-  color: #404bbf;
-}
-
-.logospan {
-  color: var(--logo-span-color);
-}
-
-.navlink {
-  position: relative;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--text-color);
-  padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.active {
-  color: #404bbf;
-}
-.active::after {
-  position: absolute;
-  content: "";
-  left: 0;
-  bottom: -4px;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
-  width: 100%;
-}
-
-.adreslink {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--text-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.head .adress {
-  font-style: normal;
-}
-/* HEADER--placing */
-.headercontainer {
-  display: flex;
-  gap: 20%;
-}
-.headernav {
-  display: flex;
-  align-items: center;
-}
-.headernav .list {
-  display: flex;
-  gap: 40px;
-}
-.adress .list {
-  display: flex;
-  gap: 40px;
 }
 
 /* HERO SECTION */
@@ -200,9 +121,9 @@ img {
   padding: 120px 0;
 }
 
-.featuressection .listitem {
-  /* border: 1px solid red; */
-  width: calc((100% - 72px) / 4);
+.featuressection .list {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .icon {
@@ -343,102 +264,6 @@ img {
   fill: currentColor;
 }
 
-/* FOOTER */
-.footer {
-  background-color: var(--logo-span-color);
-  padding: 100px 0;
-}
-
-.footercontainer {
-  display: flex;
-  align-items: baseline;
-}
-
-.footerleft,
-.footerright {
-  margin-right: 120px;
-}
-.footer .socialicons {
-  list-style: none;
-  display: flex;
-  gap: 16px;
-  justify-content: center;
-  padding: 20px 0 0 0;
-}
-
-.footer .sociallink {
-  display: flex;
-  /* display: inline-block;
-  margin-bottom: 16px; */
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer .sociallink:hover,
-.footer .sociallink:focus {
-  background-color: #31d0aa;
-}
-
-.footer .paragraph {
-  max-width: 264px;
-  color: var(--background-color);
-  margin-bottom: 16px;
-}
-
-.footer .logospan {
-  color: #f4f4fd;
-}
-
-/* FOOTER SUBSCRIBE SECTION */
-.subscribebox {
-  display: flex;
-  gap: 24px;
-  padding: 20px 0 0 0;
-}
-/* .subscribefooterlabel {
-  display: flex;
-  gap: 24px;
-} */
-
-.subscribefooterlabel .textbox {
-  gap: 24px;
-  width: 264px;
-  height: 40px;
-  flex-shrink: 0;
-  border-radius: 4px;
-  border: 1px solid #ffffff;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  background-color: transparent;
-  color: #ffffff;
-  font-size: 12px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  padding-left: 16px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-}
-
-.subscribebox .textbox::placeholder {
-  color: #ffffff;
-}
-
-.subscribebox .textbox:focus {
-  border: 1px solid var(--background-color);
-  outline: none;
-}
-
-.subscribebox .herobutton {
-  min-width: 165px;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  padding: 8px 24px;
-}
-
-.subscribebox .herobutton .svgproperties {
-  margin-left: 16px;
-}
 /* PORTFOLIO */
 .portfolio {
   padding: 96px 0 120px 0;
@@ -543,213 +368,41 @@ img {
   transform: translatey(0);
 }
 
-/* MODAL */
-.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
+/* RESPOSNSIVE */
+
+@media (min-width: 481px) and(max-width: 768px) {
+  .container {
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+  .featuressection .list {
+    border: 1px solid red;
+    display: flex;
+    flex-wrap: wrap;
+    /* column-width: 40%; */
+    width: 100%;
+  }
+  .featuressection .listitem {
+    /* border: 1px solid red; */
+    /* width: calc((100% - 72px) / 4); */
+    width: 40%;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+  .featuressection .listitem {
+    /* border: 1px solid red; */
+    width: calc((100% - 72px) / 4);
+    /* width: 100%; */
+  }
 }
 
-.backdrop {
-  position: fixed;
-  height: 100vh;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
-  background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  min-height: 584px;
-  background: #fcfcfc;
-  width: 408px;
-  border-radius: 4px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 72px 24px 24px 24px;
-}
-
-.modal .modalcontainer {
-  margin-bottom: 8px;
-}
-.modal .paragraph {
-  font-weight: 500;
-  color: var(--logo-span-color);
-  margin-bottom: 16px;
-  text-align: center;
-}
-.closemodal {
-  position: absolute;
-  top: 24px;
-  right: 24px;
-  width: 24px;
-  height: 24px;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #e7e9fc;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.closemodal .svgproperties {
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: var(--logo-span-color);
-}
-
-.closemodal:hover .svgproperties,
-.closemodal:focus .svgproperties {
-  fill: #ffffff;
-}
-
-.closemodal:hover,
-.closemodal:focus {
-  background-color: #404bbf;
-  border: none;
-}
-
-/* .form {
-  display: flex;
-  flex-direction: column;
-  gap: 116px;
-} */
-
-/* .form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  border: none;
-} */
-
-/* INPUT TEXT BOX AND LABELS */
-
-.textboxlabelgroup {
-  margin-bottom: 8px;
-}
-
-.form-label {
-  display: block;
-  gap: 4px;
-  width: 360px;
-  color: var(--linkiconcolor);
-  font-family: Roboto;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: 0.04em;
-  line-height: 1.17;
-  margin-bottom: 4px;
-}
-
-.textboxiconcontainer {
-  /* border: 1px solid red; */
-  position: relative;
-}
-.textbox {
-  width: 100%;
-  height: 40px;
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  padding-left: 38px;
-  background-color: transparent;
-  outline: transparent;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.inputicon {
-  position: absolute;
-  top: 50%;
-  left: 16px;
-  transform: translateY(-50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.textboxiconcontainer:focus-within {
-  fill: #4d5ae5;
-}
-
-.textbox:focus {
-  /* border: 1px solid var(--logo-color); */
-  border-color: #4d5ae5;
-  outline: none;
-}
-.textareacontainer {
-  margin-bottom: 16px;
-}
-
-.textareacontainer .modalcomment {
-  padding: 8px 16px;
-  width: 100%;
-  height: 120px;
-  border-radius: 4px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  color: rgba(46, 47, 66, 0.4);
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-  background-color: transparent;
-  outline: transparent;
-  resize: none;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.textareacontainer .modalcomment:focus {
-  border-color: #4d5ae5;
-  outline: none;
-}
-
-.checkboxcontainer {
-  margin-bottom: 24px;
-}
-.checkboxlabel {
-  display: block;
-  gap: 8px;
-  color: var(--linkiconcolor);
-  font-family: Roboto;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.17;
-  letter-spacing: 0.04em;
-}
-
-.checkboxlabel .link {
-  color: var(--logo-color);
-}
-
-.checkboxspan {
-  width: 16px;
-  height: 16px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  border-radius: 2px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  fill: transparent;
-}
-
-.checkboxinput:checked + .checkboxlabel .checkboxspan {
-  background-color: var(--span-checked-background);
-  border: none;
-  fill: var(--footer-text);
-}
-
-.modal .herobutton {
-  margin: 0 auto;
+@media (max-width: 768px) {
+  .featuressection .listitem .icon {
+    display: none;
+  }
 }
