--- a/css/footer.css
+++ b/css/footer.css
@@ -1,96 +1,104 @@
 /* FOOTER */
 .footer {
-    background-color: var(--logo-span-color);
-    padding: 100px 0;
-  }
-  
-  .footercontainer {
-    display: flex;
-    align-items: baseline;
-  }
-  
-  .footerleft,
-  .footerright {
-    margin-right: 120px;
-  }
-  .footer .socialicons {
-    list-style: none;
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-    padding: 20px 0 0 0;
-  }
-  
-  .footer .sociallink {
-    display: flex;
-    /* display: inline-block;
+  background-color: var(--logo-span-color);
+  padding: 100px 0;
+}
+
+.footercontainer {
+  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footerleft,
+.footerright {
+  margin-right: 120px;
+}
+.footer .socialicons {
+  list-style: none;
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  padding: 20px 0 0 0;
+}
+
+.footer .sociallink {
+  display: flex;
+  /* display: inline-block;
     margin-bottom: 16px; */
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .footer .sociallink:hover,
-  .footer .sociallink:focus {
-    background-color: #31d0aa;
-  }
-  
-  .footer .paragraph {
-    max-width: 264px;
-    color: var(--background-color);
-    margin-bottom: 16px;
-  }
-  
-  .footer .logospan {
-    color: #f4f4fd;
-  }
-  
-  /* FOOTER SUBSCRIBE SECTION */
-  .subscribebox {
-    display: flex;
-    gap: 24px;
-    padding: 20px 0 0 0;
-  }
-  /* .subscribefooterlabel {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer .sociallink:hover,
+.footer .sociallink:focus {
+  background-color: #31d0aa;
+}
+
+.footer .paragraph {
+  max-width: 264px;
+  color: var(--background-color);
+  margin-bottom: 16px;
+}
+
+.footer .logospan {
+  color: #f4f4fd;
+}
+
+/* FOOTER SUBSCRIBE SECTION */
+.subscribebox {
+  margin: 0 auto;
+  display: block;
+  /* gap: 24px; */
+  padding: 20px 0 0 0;
+}
+/* .subscribefooterlabel {
     display: flex;
     gap: 24px;
   } */
-  
-  .subscribefooterlabel .textbox {
-    gap: 24px;
-    width: 264px;
-    height: 40px;
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 1px solid #ffffff;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    background-color: transparent;
-    color: #ffffff;
-    font-size: 12px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    padding-left: 16px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  }
-  
-  .subscribebox .textbox::placeholder {
-    color: #ffffff;
-  }
-  
-  .subscribebox .textbox:focus {
-    border: 1px solid var(--background-color);
-    outline: none;
-  }
-  
-  .subscribebox .herobutton {
-    min-width: 165px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    padding: 8px 24px;
-  }
-  
-  .subscribebox .herobutton .svgproperties {
-    margin-left: 16px;
-  }
+
+.subscribebox .herobutton {
+  margin: 0 auto;
+  margin-top: 10px;
+}
+.subscribefooterlabel .textbox {
+  gap: 24px;
+  width: 264px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+  color: #ffffff;
+  font-size: 12px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.subscribebox .textbox::placeholder {
+  color: #ffffff;
+}
+
+.subscribebox .textbox:focus {
+  border: 1px solid var(--background-color);
+  outline: none;
+}
+
+.subscribebox .herobutton {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  padding: 8px 24px;
+}
+
+.subscribebox .herobutton .svgproperties {
+  margin-left: 16px;
+}
