--- a/css/header.css
+++ b/css/header.css
@@ -67,8 +67,11 @@
 }
 /* HEADER--placing */
 .headercontainer {
+  width: 100%;
   display: flex;
-  gap: 20%;
+  justify-content: space-between;
+  padding: 0 16px;
+  /* gap: 20%; */
 }
 .headernav {
   width: 100%;
