--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,6 @@ body {
   /* overflow-x: hidden; */
 }
 
-.container {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-
 .list {
   list-style: none;
   display: flex;
@@ -413,25 +407,33 @@ img {
 /* RESPOSNSIVE */
 
 @media (min-width: 769px) and (max-width: 1199px) {
+  .headercontainer {
+    width: 100%;
+
+    justify-content: space-between;
+    padding: 0 16px;
+  }
   .headernav {
     width: 60%;
   }
-
   .headernav .list {
     display: flex;
-    gap: 40px;
+    /* gap: 40px; */
   }
 
-  .adress {
-    width: 40%;
-  }
   .adress .list {
     display: block;
   }
 
-  .container {
-    margin: 0 auto;
-    padding: 0 15px;
+  .featuressection .paragraph {
+    color: var(--SLATE, #434455);
+
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
   }
   .featuressection .list,
   .ourteamsection .list {
@@ -443,14 +445,14 @@ img {
     /* padding: 0 150px; */
   }
   .featuressection .container {
-    /* padding: 0 ; */
-    /* border: 1px solid red; */
-    width: 805px;
+    width: 100%;
+
+    margin: 0 16px;
   }
 
   .featuressection .list {
-    border: 1px solid red;
-    gap: 24px;
+    gap: 23px;
+    width: 769px;
   }
 
   .featuressection .listitem {
@@ -462,8 +464,42 @@ img {
   .featuressection .listitem:nth-child(-n + 2) {
     padding-top: 0;
   }
+
+  .featuressection .headerthree {
+    color: var(--NAVY-BLUE, #2e2f42);
+    text-align: start;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px; /* 111.111% */
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+  }
+  .ourteamsection .headertwo,
+  .customers .headertwo {
+    color: var(--NAVY-BLUE, #2e2f42);
+    text-align: center;
+
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 40px; /* 111.111% */
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+  }
+  .ourteamsection {
+    display: flex;
+    justify-content: center;
+  }
+  .ourteamsection .container {
+    width: 768px;
+  }
+
   .ourteamsection .list {
-    padding: 0 108px;
+    width: 100%;
+    padding: 0 83px;
   }
 
   .teammember {
@@ -472,22 +508,27 @@ img {
   }
   .customers {
     padding: 96px 0;
+    display: flex;
+    justify-content: center;
   }
   .customers .container {
+    width: 768px;
     display: flex;
-    width: 769px;
+    /* width: 769px; */
     /* margin: 96px 0; */
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    justify-content: center;
     /* gap: 96px; */
   }
   .customers .list {
+    width: 100%;
     display: flex;
     flex-direction: row;
     /* justify-content: flex-end; */
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 24px;
   }
   .customers .headertwo {
@@ -527,18 +568,20 @@ img {
   }
 }
 @media (min-width: 1200px) {
+  .container {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
   .headernav {
-    width: 60%;
+    width: 50%;
   }
 
   .headernav .list {
     display: flex;
-    gap: 40px;
+    /* gap: 40px; */
   }
 
-  .adress {
-    width: 40%;
-  }
   .adress .list {
     display: flex;
 
