--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ body {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .visually-hidden {
@@ -65,6 +67,7 @@ img {
 }
 
 /* HERO SECTION */
+
 .herosection {
   /* background-color: var(--logo-span-color); */
   background-image: linear-gradient(
@@ -80,6 +83,7 @@ img {
   margin: 0 auto;
   height: 600px;
 }
+
 .herosection .container {
   display: flex;
   flex-direction: column;
@@ -392,6 +396,18 @@ img {
 }
 
 /* RESPOSNSIVE */
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .herosection {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/herosection.jpg);
+  }
+}
 
 @media (min-width: 769px) and (max-width: 1199px) {
   .headernav {
