--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,7 @@ img {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/herosection.jpg);
+      url(../images/herosection@2x.jpg);
   }
 }
 
